# chunky

./: Cargo.toml  docker-compose.yaml
migrations/: 20241108104925_create_uploads_table.sql
src/: main.rs
