[package]
name = "chunky"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
md5 = "0.7.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
